# rust_html_scraper_template

./: .gitignore  Cargo.toml  README.md
src/: main.rs
