[package]
name = "rust_html_scraper_template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
reqwest = { version = "0.11", features = ["blocking", "cookies"] }
scraper = "0.13"
